# Research-AI

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  quick_demo.sh
.github/workflows/: ci.yml
api/: README.md  pyproject.toml
dags/: embed_and_index.py  ingest_arxiv.py  process_pdfs.py
data/arxiv/: metadata-20250816T195012-30ecdc63.json
docker/api/: Dockerfile
docker/api/app/: main.py
docker/postgresql-init/: 00-init-db.sh
docker/ui/: Dockerfile  app.py  test_ui_standalone.py
docs/: ARCHITECTURE.md  CODEBASE_GUIDE.md  README.md  TROUBLESHOOTING.md  WORKFLOW_QUICKSTART.md  architecture.drawio  architecture.mov
infra/airflow/: Dockerfile
scripts/: check_indexing_status.py  continuous_indexing.sh  create_db.sh  download_papers.py  download_papers_local.py  fast_index_remaining.py  fix_opensearch_index.sh  healthcheck.sh  index_all_remaining.py  index_only.py  process_and_index_gcs.py  process_local_pdfs.py  query_chunks.py  reprocess_all_pdfs.sh  startup_check.sh  trigger_indexing.sh  update_env_vars.sh  upload_sample_pdfs.py
scripts/gcp/: ollama-startup.sh
scripts/infra/: init_airflow.sh  reset_airflow_dag.sh  setup_ollama.sh
scripts/researchai/: embedder_test.py  ingest_metadata.py  ingest_pdf.py
services/chunkers/: base.py  heading_aware.py  sliding_window.py
services/embedding/: embedder.py  huggingface_embedder.py
services/ingestion/arxiv/: client.py  config.py  minio_utils.py  runner.py  writer.py
services/opensearch/: create_index.py
services/processing/chunking/: chunker.py
services/processing/db_write/: db_writer.py
services/processing/extractors/: base.py  hybrid_extractor.py  pdfminer_extractor.py
services/processing/normalization/: text_normaliser.py
services/processing/ocr/: tesseract_ocr.py
services/search/: opensearch_store.py  vector_store.py
tests/: test_api.py
tests/ingestion/: test_arxiv_client_ingest.py  test_ingest_arxiv_dag.py
tests/integration/: test_full_pipeline.py
tests/processing/: test_chunkers.py  test_db_writer.py  test_ocr_wrapper.py  test_pdf_extractor.py  test_text_normaliser.py
tests/unit/: test_arxiv_client.py
