[project]
name = "researchai-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Smarth Bakshi",email = "bakshismarth.99@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
core = { path = "../packages/core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.8"
mypy = "^1.17.1"

